icon-container: don't chain up style-updated for the desktop container

Chaining up resets the background to the default color, which is not
what we want for the desktop container.

https://bugzilla.gnome.org/show_bug.cgi?id=648137